# OCR-library-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: basic_usage.py
matocr8d/: __init__.py  core.py  exceptions.py  preprocessing.py  utils.py
matocr8d/engines/: __init__.py  base.py  easyocr.py  paddleocr.py  tesseract.py
matocr8d/enterprise/: __init__.py  auth.py  config.py  monitoring.py
tests/: __init__.py  test_core.py  test_utils.py
