[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "matocr8d"
version = "1.0.0"
description = "Advanced OCR library with multiple engine support and preprocessing capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MatOCR8D Team", email = "contact@matocr8d.com"}
]
maintainers = [
    {name = "MatOCR8D Team", email = "contact@matocr8d.com"}
]
keywords = ["ocr", "optical character recognition", "text extraction", "computer vision"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing"
]
requires-python = ">=3.8"
dependencies = [
    "Pillow>=9.0.0",
    "numpy>=1.21.0"
]

[project.optional-dependencies]
tesseract = [
    "pytesseract>=0.3.10"
]
easyocr = [
    "easyocr>=1.6.0"
]
paddleocr = [
    "paddleocr>=2.6.0"
]
opencv = [
    "opencv-python>=4.5.0"
]
all = [
    "pytesseract>=0.3.10",
    "easyocr>=1.6.0", 
    "paddleocr>=2.6.0",
    "opencv-python>=4.5.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/matocr8d"
Documentation = "https://matocr8d.readthedocs.io/"
Repository = "https://github.com/yourusername/matocr8d.git"
"Bug Tracker" = "https://github.com/yourusername/matocr8d/issues"

[tool.setuptools]
packages = ["matocr8d", "matocr8d.engines"]

[tool.setuptools.package-data]
matocr8d = ["*.py"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["matocr8d"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
